--- a/style.css
+++ b/style.css
@@ -8,19 +8,24 @@ html{
 	scroll-behavior: smooth;
 }
 body{ 
-	background: #1f242d;
+	background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 18%, rgba(0,212,255,1) 88%);
+	box-shadow: 0px -10px 20px  rgb(86, 192, 227) inset, 0px 10px 20px  rgb(86, 192, 227) inset;
 	color: white;
 }
 #header{
 	width: 100%;
 	height: 100vh;
 	position: relative;
+	background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 18%, rgba(0,212,255,1) 88%);
+	box-shadow: 0px -10px 20px  rgb(86, 192, 227) inset, 0px 10px 20px  rgb(86, 192, 227) inset;
+
 }
 .home-row{
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	margin-bottom: 12%;
+	justify-content: center;
+	padding: 50px 100px 160px 100px;
 }
 .img-container{
 	margin-top: 5%;
@@ -40,18 +45,26 @@ body{
 	padding: 10px 10%;
 }
 nav{
+	background: linear-gradient(90deg, rgba(2,0,36,1) 15%, rgba(2,0,36,1) 15%, rgba(2,0,36,1) 50%, rgba(2,0,36,1) 89%, rgba(0,212,255,1) 100%);
+	padding: 2px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
 .logo{
-    width: 140px;
+	margin-left: 3.5%;
+    width: 100px;
+	height: 80px;
+	padding: 3px 4px;
+}
+nav ul{
+	padding-right: 8%;
 }
 nav ul li{
 	display: inline-block;
 	list-style: none;
-	margin: 10px 20px;
+	margin: 10px 30px;
 }
 nav ul li a{
 	color: white;
@@ -82,17 +95,23 @@ nav ul li a:hover::after{
 	width: 100%;
 }
 .header-text{
-	margin-top: 14%;
+	margin-top: 10%;
 	font-size: 30px;
+}
+.color-sub-title{
+	text-shadow: 1px 1px 1px #00090b, 0 0 2px #000102, 0 0 20px #29abcb;
+
 }
 .header-text h1{
 	margin-top: 20px;
 	font-size: 60px;
 	margin-left: 20px;
+	
 }
 .header-text .first-text{
 	font-family: "Franklin Gothic Medium";
 	margin-bottom: 30px;
+
 }
 span .color-sub-title{
 	color:#43c4ee ;
@@ -105,19 +124,30 @@ span .color-sub-title{
 }
 /*--About Section starts here--*/
 #about{
-	padding: 80px 0;
+	background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(2,0,36,1) 0%, rgba(2,0,36,1) 50%, rgba(2,0,36,1) 100%, rgba(0,212,255,1) 100%);
+	padding: 60px 60px;
 	color: #ababab;
+	box-shadow: 0px -10px 20px  rgb(86, 192, 227) inset, 0px 10px 20px  rgb(86, 192, 227) inset;
 }
 #about h1{
-	color: #43c4ee;
+	text-align: center;
+	color: #010101;
+	text-shadow: 1px 1px 2px #43c4ee, 0 0 25px #43c4ee, 0 0 5px #43c4ee;
+
 }
+#about p{
+	text-align: justify;
+}
+
 .about-doc{
-	font-family: "Franklin Gothic Medium";
+	font-family: "Futara";
 }
-.about-col-2 .about-doc-mid span{
+ .about-doc-mid span{
 	color: #43c4ee;
 	font-family: "Franklin Gothic Medium";
-	margin-left:40px ;
+}
+.about-row .about-text{
+	margin-bottom: 30px;
 }
 .row{
 	display: flex;
@@ -137,6 +167,87 @@ span .color-sub-title{
 	font-size: 60px;
 	font-weight: 600;
 	color: white;
+}
+.card{
+	display: flex;
+	width: 100%;
+	margin-bottom: 20px;
+}
+.card h3{
+	text-shadow: 1px 1px 2px #43c4ee, 0 0 25px #43c4ee, 0 0 5px #43c4ee;
+	margin: 10px 0;
+}
+
+.card .education{
+	width: 50%;
+	padding-right: 0%;
+
+}
+.card .skills{
+	margin-left: 2%;
+	width: 50%;
+}
+.card .education ul span,
+.card .skills ul span
+{
+	color: #43c4ee;
+	font-size: 18px;
+
+}
+.card .education ul .span-small,
+.card .skills ul .span-small{
+	font-size: 17px;
+	color: #b6b6b6;
+}
+.card .education ul,
+.card .skills ul  {
+font-size: 20px;
+}
+.card .education ul li,
+.card .skills ul li{
+  list-style-type: none; 
+  position: relative;
+  padding-left: 15px;
+}
+.card .education ul li::before,
+.card .skills ul li::before{ 
+	content: "\25BA \0020";
+	font-size: 10px;
+	position: absolute;
+	top: 5px;
+	left: -10px;
+}
+.publications{
+	margin-top: 7%;
+}
+.publications h3{
+	text-shadow: 1px 1px 2px #43c4ee, 0 0 25px #43c4ee, 0 0 5px #43c4ee;
+
+	text-align: center;
+	margin-bottom: 10px;
+	color: #0c0c0c;
+}
+.publications p{
+	margin-bottom: 18px;
+	font-size: 20px;
+	font-family: "Futara";
+
+
+}
+.publications p a{
+	text-decoration: none;
+	color: #fff;
+	font-size: 22px;
+	font-family: "Futara";
+
+}
+.publications p a:hover{
+	color: #43c4ee;
+	transition: 0.5s ;
+}
+.publications p span{
+	font-style: italic;
+
 }
 .tab-titles{
 	display: flex;
@@ -196,7 +307,15 @@ span .color-sub-title{
 
 /*-- Services section start here--*/
 #services{
+	
 	padding: 30px 0;
+}
+#services h1{
+	margin-top: 4%;
+	margin-bottom: 7%;
+	text-align: center;
+	text-shadow: 1px 1px 1px #43c4ee, 0 0 5px #43c4ee, 0 0 0px #43c4ee;
+
 }
 .services-list{
 	display: grid;
@@ -210,7 +329,7 @@ span .color-sub-title{
 	font-size: 16px;
 	font-weight: 300;
 	border-radius: 10px;
-	transition: background 0.5s, transform 0.5s;
+	transition: 0.5s, transform 0.5s;
 }
 .services-list div i{
 	font-size: 50px;
@@ -246,32 +365,67 @@ span .color-sub-title{
 /*-- Services section ends here--*/
 
 /*-- Portfolio section starts here--*/
-#portfolio{
+#portfolio .js-portfolio{
 	padding: 50px 0;
 }
-.work-list{
+#portfolio .react-portfolio{
+	padding: 50px 0;
+}
+#portfolio h2{
+	text-shadow: 1px 1px 1px #43c4ee, 0 0 5px #43c4ee, 0 0 0px #43c4ee;
+	text-align: center;
+}
+#portfolio h4{
+	text-shadow: 1px 1px 2px #eef3f4, 0 0 25px #43c4ee, 0 0 5px #43c4ee;
+	text-align: center;
+	font-size: 30px;
+	margin: 20px 0;
+	color: #0c0c0c;
+	text-decoration: underline;
+}
+.js-portfolio .work-list{
 	display: grid;
-	grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+	grid-template-columns: repeat(3,minmax(250px, 1fr));
 	grid-gap: 40px;
 	margin-top: 50px;
 }
-.work{
+.react-portfolio .work-list{
+	display: grid;
+	grid-template-columns: repeat(2,minmax(250px, 1fr));
+	grid-gap: 40px;
+	margin-top: 50px;
+}
+.ux-ui-portfolio .work-list{
+	display: grid;
+	grid-template-columns: repeat(2,minmax(250px, 1fr));
+	grid-gap: 40px;
+	margin-top: 50px;
+}
+.js-portfolio .work,
+.react-portfolio  .work,
+.ux-ui-portfolio .work{
 	border-radius: 10px;
 	position: relative;
 	overflow: hidden; 
 
 }
-.work img{
+.js-portfolio .work img,
+.react-portfolio  .work img,
+.ux-ui-portfolio  .work img{
 	width: 100%; 
 	border-radius: 10px;
 	display: block;
 	transition: 0.5s;
 }
-.work p{
+.js-portfolio.work p,
+.react-portfolio.work p,
+.ux-ui-portfolio.work p{
 	text-align: justify;
 	text-align-last: center;
 }
-.layer{
+.js-portfolio .layer,
+.react-portfolio .layer,
+.ux-ui-portfolio .layer{
 	width: 100%;
 	height: 0%;
 	background: linear-gradient(rgb(0, 0,0, 0.6),#43c4ee); 
@@ -289,11 +443,15 @@ span .color-sub-title{
 	align-items: center;
 	transition: 0.5s;
 }
-.layer h3 {
+.js-portfolio .layer h3,
+.react-portfolio .layer h3,
+.ux-ui-portfolio .layer h3 {
 	font-weight: 500;
 	margin-bottom: 20px;
 }
-.layer a{
+.js-portfolio .layer a,
+.react-portfolio .layer a,
+.ux-ui-portfolio .layer a{
 	margin-top: 20px;
 	font-size: 18px;
 	color: #43c4ee;
@@ -305,11 +463,15 @@ span .color-sub-title{
 	height: 60px;
 	text-align: center;
 }
-.work:hover img{
+.js-portfolio .work:hover img,
+.react-portfolio .work:hover img,
+.ux-ui-portfolio .work:hover img{
 	transform: scale(1.1);
 
 }
-.work:hover .layer{
+.js-portfolio .work:hover .layer,
+.react-portfolio .work:hover .layer,
+.ux-ui-portfolio .work:hover .layer{
 	height: 100%;
 }
 .btn{
@@ -325,6 +487,11 @@ span .color-sub-title{
 }
 .btn:hover{
 	background: #43c4ee;
+}
+#portfolio .btn{
+	margin-top: 3.5%;
+	border: 1px solid #ffffff;
+	box-shadow: 0px -10px 20px  rgb(86, 192, 227) inset, 0px 10px 20px  rgb(86, 192, 227) inset;
 }
 /*-- Portfolio section ends here--*/
 
@@ -407,12 +574,33 @@ form .btn2{
 nav .fa-solid{
 	display: none;
 }
-@media only screen and (max-width: 600px){
-	.header-text{
-		margin-top: 45%;
-		margin-bottom: 40%;
-		margin-left: 5%;
-		font-size: 28px;
+@media only screen and (max-width: 1050px){
+	.img-container i{
+	right: 15%;
+	top: 7%;	
+	}
+	.home-row .home-sub-title {
+		font-size: 27px;
+	}
+}
+@media only screen and (max-width: 820px){
+	.img-container i{
+	right: 15%;
+	top: 14%;
+	}
+}
+@media only screen and (max-width: 970px){
+	.header-text {
+		margin-top: 40%;
+	}
+	.header-text h1 {
+		font-size: 40px;
+	}
+	.home-row .home-sub-title {
+		font-size: 24px;
+	}
+	nav {
+		padding: 10px 50px 10px 10px;
 	}
 	 nav ul li a.header::after{
 	content: '';
@@ -436,6 +624,103 @@ nav .fa-solid{
 	nav ul li a:hover::after{
 		width: 100%;
 
+	}
+	nav .fa-solid{
+		display: block;
+		font-size: 25px;
+	}
+	nav ul{
+		background: #03161c;
+		position: fixed;
+		top: 0; 
+		right: -200px;
+		width: 200px;
+		height: 100vh;
+		padding-top: 50px;
+		z-index: 2; 
+		transition: 0.5s; 
+	}
+	nav ul li{
+		display: block;
+		margin: 25px;
+	}
+	nav ul .fa-solid{
+		position: absolute;
+		top: 25px;
+		left: 25px;
+		cursor: pointer;
+	}
+	#about {
+		padding: 50px 50px;
+	}
+	.about-row {
+		margin: 2% 4%;
+		font-size: 25px;
+		color: white;
+	}
+	.card {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+	}
+	.card .education {
+		width: 100%;
+		padding: 0%;
+	}
+	.card .skills {
+		width: 100%;
+		padding: 0%;
+	}
+	
+	.card .education ul li, .card .skills ul li {
+		list-style-type: none;
+		position: relative;
+		padding-left: 1px;
+	}
+	.js-portfolio .work-list,
+	.react-portfolio .work-list,
+	.ux-ui-portfolio .work-list {
+		display: grid;
+		grid-template-columns: repeat(2,minmax(250px, 1fr));
+	}
+	#contact .row{
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+@media only screen and (max-width: 600px){
+	.header-text{
+		margin-top: 55%;
+		margin-bottom: 40%;
+		margin-left: 5%;
+		font-size: 28px;
+	}
+	nav {
+		padding: 10px 50px 10px 10px;
+
+	}
+	 nav ul li a.header::after{
+	content: '';
+	width: 0%;
+	height: 3px;
+	background: #43c4ee;
+	position: absolute;
+	left: 0;
+	bottom: -6px;
+	}
+	nav ul li a::after{
+	content: '';
+	width: 0%;
+	height: 3px;
+	background: #43c4ee;
+	position: absolute;
+	left: 0;
+	bottom: -6px;
+	transition: 0.5s;
+	}
+	nav ul li a:hover::after{
+		width: 100%;
 	}
 	.header-text h1{
 		font-size: 30px;
@@ -468,7 +753,7 @@ nav .fa-solid{
 	.sub-title{
 		font-size: 40px;
 	}
-	.about-col-1, .about-col-2{
+	.about-col-1{
 		flex-basis: 100%;
 	}
 	.about-col-1{
@@ -477,6 +762,40 @@ nav .fa-solid{
 	.about-col-2{
 		font-size: 20px;
 	}
+	#about {
+		padding: 30px 30px;
+	}
+	.about-row {
+		margin: 2% 4%;
+		font-size: 25px;
+		color: white;
+	}
+	.card {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+	}
+	.card .education {
+		width: 100%;
+		padding: 0%;
+	}
+	.card .skills {
+		width: 100%;
+		padding: 0%;
+	}
+	
+	.card .education ul li, .card .skills ul li {
+		list-style-type: none;
+		position: relative;
+		padding-left: 1px;
+	}
+	.js-portfolio .work-list,
+	.react-portfolio .work-list,
+	.ux-ui-portfolio .work-list {
+		display: grid;
+		grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+	}
+	
 	.tab-links{
 		font-size: 15px;
 		margin-right: 20px;
@@ -505,7 +824,7 @@ nav .fa-solid{
 		font-size: 14px;
 	}
 	.img-container i{
-		font-size: 80px;
+		font-size: 150px;
 		right: 20%;
 		top: 7%;
 	}
@@ -515,18 +834,7 @@ nav .fa-solid{
 	margin-top: -8px;
 	display: block;
 }
-@media only screen and (max-width: 1050px){
-	.img-container i{
-	right: 15%;
-	top: 7%;	
-	}
-}
-@media only screen and (max-width: 820px){
-	.img-container i{
-	right: 15%;
-	top: 14%;
-	}
-}
+
 
 
 
