--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body{
 	padding: 10px 10%;
 }
 nav{
-	background: linear-gradient(90deg, rgba(2,0,36,1) 15%, rgba(2,0,36,1) 15%, rgba(2,0,36,1) 50%, rgba(2,0,36,1) 89%, rgba(0,212,255,1) 100%);
+	background: linear-gradient(90deg, rgba(2,0,36,1) 15%, rgba(2,0,36,1) 15%, rgba(2,0,36,1) 50%, rgba(2,0,36,1) 89%, rgb(5, 5, 5) 100%);
 	padding: 2px;
 	display: flex;
 	align-items: center;
@@ -133,8 +133,8 @@ span .color-sub-title{
 }
 #about h1{
 	text-align: left;
-	margin-left: 130px;
 	color: white;
+	text-align: center;
 	/* text-shadow: 1px 1px 2px #43c4ee, 0 0 25px #43c4ee, 0 0 5px #43c4ee; */
 
 }
@@ -860,9 +860,9 @@ nav .fa-solid{
 		font-size: 14px;
 	}
 	.img-container i{
-		font-size: 150px;
-		right: 20%;
-		top: 7%;
+		font-size: 130px;
+		right: 13%;
+		top: 4%;
 	}
 }
 #msg{
